--- a/exercises/01_intro/ex_ante.ipynb
+++ b/exercises/01_intro/ex_ante.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "row = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
     "print(row)"
@@ -58,9 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]\n",
+      " [5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]\n",
+      " [9]]\n"
+     ]
+    }
+   ],
    "source": [
     "col = np.array([[1], [2], [3], [4], [5], [6], [7], [8], [9]])\n",
     "print(col)"
@@ -75,9 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]\n",
+      " [5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]\n",
+      " [9]]\n"
+     ]
+    }
+   ],
    "source": [
     "col = np.array([[1, 2, 3, 4, 5, 6, 7, 8, 9]]).T\n",
     "print(col)"
@@ -93,13 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Call the shape attribute for the row and col vars. Check the shape of row.T\n",
     "\n",
-    "# FILL IN HERE"
+    "# FILL IN HERE\n",
+    "row.shape\n",
+    "col.shape"
    ]
   },
   {
@@ -638,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
