--- a/exercises/09_CLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/09_CLogit/ex_ante/ex_ante.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import random\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +333,7 @@
        "y                                  Index for the chosen car (0,1,...,5)  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +484,7 @@
        "        [ 1.22254134, -0.15452948]]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +529,18 @@
       " [-0.50464478 -1.72288901  2.43498185]\n",
       " [ 2.32051311 -1.25107558 -1.54901442]\n",
       " [ 0.77859848 -1.54672145  0.91348237]]\n",
-      "\n",
+      "[[ 0.30471708 -1.03998411]\n",
+      " [ 0.7504512   0.94056472]\n",
+      " [-1.95103519 -1.30217951]\n",
+      " [ 0.1278404  -0.31624259]\n",
+      " [-0.01680116 -0.85304393]\n",
+      " [ 0.87939797  0.77779194]\n",
+      " [ 0.0660307   1.12724121]\n",
+      " [ 0.46750934 -0.85929246]\n",
+      " [ 0.36875078 -0.9588826 ]\n",
+      " [ 0.8784503  -0.04992591]\n",
+      " [-0.18486236 -0.68092954]\n",
+      " [ 1.22254134 -0.15452948]]\n",
       "True\n"
      ]
     }
@@ -543,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +572,7 @@
        "(4654, 6)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,18 +672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m u \u001b[38;5;241m=\u001b[39m clogit\u001b[38;5;241m.\u001b[39mutil(theta0, x)\n\u001b[0;32m      2\u001b[0m (u \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0.0\u001b[39m)\u001b[38;5;241m.\u001b[39mall()\n",
+      "File \u001b[1;32m~\\OneDrive - University of Copenhagen\\2023-2024\\Blok\\03\\Econometrics_B\\Excersices_git\\EconometricsB\\exercises\\09_CLogit\\ex_ante\\clogit.py:39\u001b[0m, in \u001b[0;36mutil\u001b[1;34m(theta, x, MAXRESCALE)\u001b[0m\n\u001b[0;32m     36\u001b[0m N,J,K \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mshape \n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# deterministic utility \u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m v \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;66;03m# Fill in \u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m MAXRESCALE: \n\u001b[0;32m     42\u001b[0m     \u001b[38;5;66;03m# subtract the row-max from each observation\u001b[39;00m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;66;03m# keepdims maintains the second dimension, (N,1), so broadcasting is successful\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     v \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 21)"
+     ]
     }
    ],
    "source": [
