--- a/exercises/09_CLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/09_CLogit/ex_ante/ex_ante.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,20 +672,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 21)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m u \u001b[38;5;241m=\u001b[39m clogit\u001b[38;5;241m.\u001b[39mutil(theta0, x)\n\u001b[0;32m      2\u001b[0m (u \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0.0\u001b[39m)\u001b[38;5;241m.\u001b[39mall()\n",
-      "File \u001b[1;32m~\\OneDrive - University of Copenhagen\\2023-2024\\Blok\\03\\Econometrics_B\\Excersices_git\\EconometricsB\\exercises\\09_CLogit\\ex_ante\\clogit.py:39\u001b[0m, in \u001b[0;36mutil\u001b[1;34m(theta, x, MAXRESCALE)\u001b[0m\n\u001b[0;32m     36\u001b[0m N,J,K \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mshape \n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# deterministic utility \u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m v \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;66;03m# Fill in \u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m MAXRESCALE: \n\u001b[0;32m     42\u001b[0m     \u001b[38;5;66;03m# subtract the row-max from each observation\u001b[39;00m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;66;03m# keepdims maintains the second dimension, (N,1), so broadcasting is successful\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     v \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 21)"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -695,16 +693,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,6 +710,38 @@
    "source": [
     "ccp = clogit.choice_prob(theta0, x)\n",
     "(ccp == 0.25).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667],\n",
+       "       [0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667],\n",
+       "       [0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667],\n",
+       "       ...,\n",
+       "       [0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667],\n",
+       "       [0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667],\n",
+       "       [0.16666667, 0.16666667, 0.16666667, 0.16666667, 0.16666667,\n",
+       "        0.16666667]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ccp"
    ]
   },
   {
