--- a/exercises/09_CLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/09_CLogit/ex_ante/ex_ante.ipynb
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import random\n",
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +324,7 @@
        "y                                  Index for the chosen car (0,1,...,5)  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -436,11 +427,9 @@
       "\n",
       "[4.1753448 4.1753448 4.8177056 4.8177056 5.1388859 5.1388859] \n",
       "\n",
-      "[4.1753448e+00 2.5000000e+02 4.0000000e+00 9.5000000e+01 6.0000000e-01\n",
-      " 3.0000000e+00 0.0000000e+00 7.0000000e-01 4.0000000e+00 1.0000000e-01\n",
-      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 1.0000000e+00\n",
-      " 0.0000000e+00 0.0000000e+00 0.0000000e+00 1.0000000e+00 0.0000000e+00\n",
-      " 0.0000000e+00] \n",
+      "[4.1753448 2.5       0.4       0.95      0.6       0.3       0.\n",
+      " 0.7       0.4       0.1       0.        0.        0.        0.\n",
+      " 1.        0.        0.        0.        1.        0.        0.       ] \n",
       "\n"
      ]
     }
@@ -463,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +475,7 @@
        "        [ 1.22254134, -0.15452948]]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +563,7 @@
        "(4654, 6)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +672,7 @@
        "True"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +693,7 @@
        "True"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +815,7 @@
        "3           2.954310  0.160174  18.444363"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1024,7 @@
        "College*methanol                      0.228"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1296,7 @@
        "College*methanol        0.228548  0.088872   2.571671     0.228  0.000548"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,26 +1400,26 @@
     "    \n",
     "    # B. increase price just for car j \n",
     "    rel_change_x = 1e-3\n",
-    "    x2[:, j, k_price] None # Fill in \n",
+    "    x2[:, j, k_price] *= (1.0 + rel_change_x) # Fill in \n",
     "\n",
     "    # C. evaluate CCPs\n",
-    "    ccp2 = None # Fill in \n",
+    "    ccp2 = clogit.choice_prob(thetahat, x2) # Fill in \n",
     "    \n",
     "    # D. percentage change in CCPs \n",
-    "    rel_change_y = None # Fill in \n",
+    "    rel_change_y = ccp2 / ccp1 - 1.0 # Fill in \n",
     "    \n",
     "    # E. elasticities \n",
-    "    elasticity = None # Fill in \n",
+    "    elasticity = rel_change_y / rel_change_x # Fill in \n",
     "    \n",
-    "    E_own[:, j] = None # Fill in \n",
+    "    E_own[:, j] = elasticity[:,j] # Fill in \n",
     "    \n",
     "    k_not_j = [k for k in range(J) if k != j] # indices for all other cars than j \n",
-    "    E_cross[:, j] = None # Fill in: Avg. among the cars k_not_j"
+    "    E_cross[:, j] = elasticity[:, k_not_j].mean(axis=1) # Fill in: Avg. among the cars k_not_j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1465,7 @@
        "'ev'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,18 +1477,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16992/3138173136.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create two indexed, from where idx1 is for electric cars\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# and idx0 is for non-electric cars.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0midx1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi_ev\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0midx0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi_ev\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Elasticity, EVs:   {np.mean(E_own[idx1]).round(4)}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elasticity, EVs:   -0.7149\n",
+      "Elasticity, other: -0.6311\n"
      ]
     }
    ],
