Started on PS10

--- a/exercises/10_MLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/10_MLogit/ex_ante/ex_ante.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,10 +176,10 @@
        "2    4250\n",
        "0    2943\n",
        "1    2807\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,9 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ccp, logccp = mlogit.choice_prob(theta0, x)\n",
     "np.isclose(ccp[0,0], 0.33333333)"
@@ -237,9 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ccp, logccp = mlogit.choice_prob(true_beta, x)\n",
     "np.isclose(ccp[0,0], 0.31211691)"
@@ -260,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +369,7 @@
        "x32 -1.0230  0.0314  -1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +420,7 @@
      "output_type": "stream",
      "text": [
       "q(thetahat)        =   0.9326\n",
-      "2-norm of gradient =  2.776e-11\n"
+      "2-norm of gradient =  2.763e-11\n"
      ]
     }
    ],
@@ -476,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +642,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +697,7 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,31 +708,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization terminated successfully.\n",
       "         Current function value: 0.327579\n",
-      "         Iterations: 287\n",
-      "         Function evaluations: 12685\n",
-      "         Gradient evaluations: 295\n"
+      "         Iterations: 284\n",
+      "         Function evaluations: 13471\n",
+      "         Gradient evaluations: 313\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\himan\\anaconda3\\envs\\HimanshuEnviroment\\Lib\\site-packages\\scipy\\optimize\\_minimize.py:705: OptimizeWarning: Desired error not necessarily achieved due to precision loss.\n",
+      "  res = _minimize_bfgs(fun, x0, args, jac, callback, **options)\n"
      ]
     }
    ],
    "source": [
     "# Estimate the model using estimation.estimate(), returning the results dictionary \n",
-    "mlogit_result = None "
+    "mlogit_result = estimation.estimate(mlogit.q, theta0, y, x) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unemployed</th>\n",
+       "      <th>(t, unemployed)</th>\n",
+       "      <th>Employed</th>\n",
+       "      <th>(t, employed)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>alcohol</th>\n",
+       "      <td>0.126951</td>\n",
+       "      <td>0.584262</td>\n",
+       "      <td>-0.153572</td>\n",
+       "      <td>-1.086586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>urate</th>\n",
+       "      <td>0.045754</td>\n",
+       "      <td>0.839621</td>\n",
+       "      <td>-0.095516</td>\n",
+       "      <td>-2.782551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>0.162470</td>\n",
+       "      <td>2.415161</td>\n",
+       "      <td>0.227684</td>\n",
+       "      <td>5.446663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>agesq</th>\n",
+       "      <td>-0.002446</td>\n",
+       "      <td>-3.025286</td>\n",
+       "      <td>-0.003086</td>\n",
+       "      <td>-6.333581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>schooling</th>\n",
+       "      <td>-0.009236</td>\n",
+       "      <td>-0.340409</td>\n",
+       "      <td>0.089039</td>\n",
+       "      <td>6.043658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>married</th>\n",
+       "      <td>0.400313</td>\n",
+       "      <td>2.134480</td>\n",
+       "      <td>0.708420</td>\n",
+       "      <td>6.175357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>famsize</th>\n",
+       "      <td>0.062185</td>\n",
+       "      <td>1.243174</td>\n",
+       "      <td>0.062203</td>\n",
+       "      <td>1.963767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>white</th>\n",
+       "      <td>0.039183</td>\n",
+       "      <td>0.221584</td>\n",
+       "      <td>0.738066</td>\n",
+       "      <td>7.069515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>excellent</th>\n",
+       "      <td>2.918571</td>\n",
+       "      <td>6.413395</td>\n",
+       "      <td>3.703057</td>\n",
+       "      <td>20.419876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>verygood</th>\n",
+       "      <td>2.978558</td>\n",
+       "      <td>6.476040</td>\n",
+       "      <td>3.653566</td>\n",
+       "      <td>19.507080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>good</th>\n",
+       "      <td>2.494175</td>\n",
+       "      <td>5.508702</td>\n",
+       "      <td>2.999725</td>\n",
+       "      <td>17.292455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fair</th>\n",
+       "      <td>1.460490</td>\n",
+       "      <td>2.986859</td>\n",
+       "      <td>1.876392</td>\n",
+       "      <td>10.290264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>northeast</th>\n",
+       "      <td>0.084311</td>\n",
+       "      <td>0.349584</td>\n",
+       "      <td>0.088745</td>\n",
+       "      <td>0.592803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>midwest</th>\n",
+       "      <td>0.015504</td>\n",
+       "      <td>0.073927</td>\n",
+       "      <td>0.122888</td>\n",
+       "      <td>0.944876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>south</th>\n",
+       "      <td>0.174899</td>\n",
+       "      <td>0.840688</td>\n",
+       "      <td>0.439311</td>\n",
+       "      <td>3.449642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>center</th>\n",
+       "      <td>-0.271526</td>\n",
+       "      <td>-1.382296</td>\n",
+       "      <td>-0.268833</td>\n",
+       "      <td>-2.210957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <td>-0.091873</td>\n",
+       "      <td>-0.472638</td>\n",
+       "      <td>0.098023</td>\n",
+       "      <td>0.782221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>firstq</th>\n",
+       "      <td>0.422696</td>\n",
+       "      <td>2.081609</td>\n",
+       "      <td>-0.027301</td>\n",
+       "      <td>-0.209942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>secondq</th>\n",
+       "      <td>-0.021478</td>\n",
+       "      <td>-0.100533</td>\n",
+       "      <td>-0.110564</td>\n",
+       "      <td>-0.868636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>thirdq</th>\n",
+       "      <td>-0.036158</td>\n",
+       "      <td>-0.166382</td>\n",
+       "      <td>-0.052951</td>\n",
+       "      <td>-0.412168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>const</th>\n",
+       "      <td>-6.126608</td>\n",
+       "      <td>-4.122510</td>\n",
+       "      <td>-6.247364</td>\n",
+       "      <td>-6.663822</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Unemployed  (t, unemployed)  Employed  (t, employed)\n",
+       "alcohol      0.126951         0.584262 -0.153572      -1.086586\n",
+       "urate        0.045754         0.839621 -0.095516      -2.782551\n",
+       "age          0.162470         2.415161  0.227684       5.446663\n",
+       "agesq       -0.002446        -3.025286 -0.003086      -6.333581\n",
+       "schooling   -0.009236        -0.340409  0.089039       6.043658\n",
+       "married      0.400313         2.134480  0.708420       6.175357\n",
+       "famsize      0.062185         1.243174  0.062203       1.963767\n",
+       "white        0.039183         0.221584  0.738066       7.069515\n",
+       "excellent    2.918571         6.413395  3.703057      20.419876\n",
+       "verygood     2.978558         6.476040  3.653566      19.507080\n",
+       "good         2.494175         5.508702  2.999725      17.292455\n",
+       "fair         1.460490         2.986859  1.876392      10.290264\n",
+       "northeast    0.084311         0.349584  0.088745       0.592803\n",
+       "midwest      0.015504         0.073927  0.122888       0.944876\n",
+       "south        0.174899         0.840688  0.439311       3.449642\n",
+       "center      -0.271526        -1.382296 -0.268833      -2.210957\n",
+       "other       -0.091873        -0.472638  0.098023       0.782221\n",
+       "firstq       0.422696         2.081609 -0.027301      -0.209942\n",
+       "secondq     -0.021478        -0.100533 -0.110564      -0.868636\n",
+       "thirdq      -0.036158        -0.166382 -0.052951      -0.412168\n",
+       "const       -6.126608        -4.122510 -6.247364      -6.663822"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print results from the result dictionary \n",
     "\n",
@@ -728,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -745,8 +983,8 @@
      "output_type": "stream",
      "text": [
       "q(thetahat)          =   0.3276\n",
-      "2-norm of gradient   =  1.262e-07\n",
-      "inf-norm of gradient =  6.871e-05\n"
+      "2-norm of gradient   =  1.245e-07\n",
+      "inf-norm of gradient =  6.828e-05\n"
      ]
     }
    ],
@@ -1649,7 +1887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
