Completed odds ratio

--- a/exercises/10_MLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/10_MLogit/ex_ante/ex_ante.ipynb
@@ -1214,7 +1214,7 @@
    ],
    "source": [
     "# odds ratio of being unemployed/employed vs being out of labor force\n",
-    "odds_unemp = None # fill in \n",
+    "odds_unemp = np.exp() # fill in \n",
     "odds_emp   = None # fill in \n",
     "print(f'{odds_unemp[0]:.3f}')\n",
     "print(f'{odds_emp[0]:.3f}')"
