--- a/exercises/10_MLogit/ex_ante/ex_ante.ipynb
+++ b/exercises/10_MLogit/ex_ante/ex_ante.ipynb
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "const                                1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1214,8 +1214,8 @@
    ],
    "source": [
     "# odds ratio of being unemployed/employed vs being out of labor force\n",
-    "odds_unemp = np.exp() # fill in \n",
-    "odds_emp   = None # fill in \n",
+    "odds_unemp = np.exp(x0 @ thetahat[:, 0]) # fill in \n",
+    "odds_emp   = np.exp(x0 @ thetahat[:, 1]) # fill in \n",
     "print(f'{odds_unemp[0]:.3f}')\n",
     "print(f'{odds_emp[0]:.3f}')"
    ]
